--- a/common/README
+++ b/common/README
@@ -8,6 +8,6 @@ Parasite requirements:
     - no .bss (errono/environ)
   - no const literal (no .rodata)
 
-  run bazel with --cxxopt=-DNOLIBC_IGNORE_ERRNO=1 --cxxopt=-DNOLIBC_IGNORE_ENVIRON=1 and
+  run bazel with --cxxopt=-DNO_ERRNO=1 --cxxopt=-DNO_ENVIRON=1 and
   objdump bazel-bin/infector/infector -h
   see if .data section is generated
