--- a/common/README
+++ b/common/README
@@ -4,10 +4,9 @@ Parasite requirements:
   - no vtable (no .data.rel.ro)
   - no global variable 
     - no global constructor/destructor
-    - no .rodata
-    - no .bss (errono/environ)
-  - no const literal (no .rodata)
+  - no .bss (errono/environ) solved by linking with startup asm
+  - no const literal (no .rodata) solved by string macro
 
-  run bazel with --cxxopt=-DNO_ERRNO=1 --cxxopt=-DNO_ENVIRON=1 and
+  run with
   objdump bazel-bin/infector/infector -h
   see if .data section is generated
